# langgraph-tool-agent

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: quality.yml
src/tool_agent/: __init__.py  api.py  database.py  graph.py  main.py  safe_tools.py  service.py
src/tool_agent/static/: app.js  index.html  styles.css
tests/: test_api.py  test_safe_tools.py
